--- a/SharpTools/SptlWebsite/Pages/GuidGeneratorPage.razor
+++ b/SharpTools/SptlWebsite/Pages/GuidGeneratorPage.razor
@@ -3,20 +3,26 @@
 
 <PageTitle>Guid 生成器 - SharpTools</PageTitle>
 
-<h1>Guid 生成器</h1>
-
 <FluentStack Orientation="Orientation.Vertical">
-    <h2>配置</h2>
+    <h1>Guid 生成器</h1>
 
-    <FluentNumberField Label="数量" Style="width: 100%" Min="1" @bind-Value="countInput"></FluentNumberField>
+    <FluentCard AreaRestricted="false">
+        <FluentStack Orientation="Orientation.Vertical">
+            <h2>配置</h2>
 
-    <FluentSelect TOption="GuidFormat" Label="格式" Width="100%" Items="formats" OptionText="@(x => x.Name)" @bind-SelectedOption="FormatInput"></FluentSelect>
+            <FluentNumberField Label="数量" Style="width: 100%" Min="1" @bind-Value="countInput"></FluentNumberField>
 
-    <FluentDivider Orientation="Orientation.Horizontal" Role="DividerRole.Separator" Style="width: 100%"></FluentDivider>
+            <FluentSelect TOption="GuidFormat" Label="格式" Width="100%" Items="formats" OptionText="@(x => x.Name)" @bind-SelectedOption="FormatInput"></FluentSelect>
+        </FluentStack>
+    </FluentCard>
 
-    <h2>结果</h2>
+    <FluentCard AreaRestricted="false">
+        <FluentStack Orientation="Orientation.Vertical">
+            <h2>结果</h2>
 
-    <FluentButton Style="width: 100%" OnClick="(() => ButtonClick())">重新生成</FluentButton>
+            <FluentButton Style="width: 100%" OnClick="(() => ButtonClick())">重新生成</FluentButton>
 
-    <FluentTextArea Style="width: 100%" ReadOnly="true" Rows="Math.Clamp(outputs.Length, 1, 10)" Value="@string.Join(Environment.NewLine, outputs.Select(x => FormatInput.Converter(x)))" Placeholder="点击上方按钮生成"></FluentTextArea>
+            <FluentTextArea Style="width: 100%" ReadOnly="true" Rows="Math.Clamp(outputs.Length, 1, 10)" Value="@string.Join(Environment.NewLine, outputs.Select(x => FormatInput.Converter(x)))" Placeholder="点击上方按钮生成"></FluentTextArea>
+        </FluentStack>
+    </FluentCard>
 </FluentStack>
