--- a/SharpTools/SptlWebsite/Pages/BytesRepresentationsPage.razor
+++ b/SharpTools/SptlWebsite/Pages/BytesRepresentationsPage.razor
@@ -4,32 +4,39 @@
 
 <PageTitle>字节数组表示 - SharpTools</PageTitle>
 
-<h1>字节数组表示</h1>
-
 <FluentStack Orientation="Orientation.Vertical">
-    <h2>配置与输入</h2>
+    <h1>字节数组表示</h1>
 
-    <FluentSelect TOption="BytesFormat" Width="100%" Label="源格式" OptionText="(x => x.Name)" Items="formats" @bind-SelectedOption="InputFormat">
-    </FluentSelect>
+    <FluentCard AreaRestricted="false">
+        <FluentStack Orientation="Orientation.Vertical">
+            <h2>配置与输入</h2>
 
-    <FluentTextArea @bind-Value="Input" Style="width: 100%" Label="源内容" Rows="5"></FluentTextArea>
+            <FluentSelect TOption="BytesFormat" Width="100%" Label="源格式" OptionText="(x => x.Name)" Items="formats" @bind-SelectedOption="InputFormat">
+            </FluentSelect>
 
-    <FluentInputFile AnchorId="ImportButton" DragDropZoneVisible="false" MaximumFileSize="@(1024 * 1024 * 1024)" OnCompleted="Import" />
+            <FluentTextArea @bind-Value="Input" Style="width: 100%" Label="源内容" Rows="5"></FluentTextArea>
 
-    <FluentStack Orientation="Orientation.Horizontal">
-        <FluentButton Id="ImportButton">导入文件</FluentButton>
-    </FluentStack>
+            <FluentInputFile AnchorId="ImportButton" DragDropZoneVisible="false" MaximumFileSize="@(1024 * 1024 * 1024)" OnCompleted="Import" />
 
-    <FluentSelect TOption="BytesFormat" Width="100%" Label="目标格式" OptionText="(x => x.Name)" Items="formats" @bind-SelectedOption="OutputFormat">
-    </FluentSelect>
+            <FluentStack Orientation="Orientation.Horizontal">
+                <FluentButton Id="ImportButton">导入文件</FluentButton>
+            </FluentStack>
 
-    <h2>结果与输出</h2>
+            <FluentSelect TOption="BytesFormat" Width="100%" Label="目标格式" OptionText="(x => x.Name)" Items="formats" @bind-SelectedOption="OutputFormat">
+            </FluentSelect>
+        </FluentStack>
+    </FluentCard>
 
-    <FluentTextArea Style="width: 100%" Value="@Output" Label="目标内容" Rows="5"></FluentTextArea>
+    <FluentCard AreaRestricted="false">
+        <FluentStack Orientation="Orientation.Vertical">
+            <h2>结果与输出</h2>
 
-    <FluentStack Orientation="Orientation.Horizontal">
-        <FluentButton OnClick="Export" Disabled="@(inputBytes.bytes is null)">导出文件</FluentButton>
-        <FluentButton OnClick="Swap" Disabled="@(inputBytes.bytes is null)">设为输入</FluentButton>
-    </FluentStack>
+            <FluentTextArea Style="width: 100%" Value="@Output" Label="目标内容" Rows="5"></FluentTextArea>
 
+            <FluentStack Orientation="Orientation.Horizontal">
+                <FluentButton OnClick="Export" Disabled="@(inputBytes.bytes is null)">导出文件</FluentButton>
+                <FluentButton OnClick="Swap" Disabled="@(inputBytes.bytes is null)">设为输入</FluentButton>
+            </FluentStack>
+        </FluentStack>
+    </FluentCard>
 </FluentStack>
