--- a/SharpTools/SptlWebsite/Components/InlineNongliLunarDateTimePicker.razor
+++ b/SharpTools/SptlWebsite/Components/InlineNongliLunarDateTimePicker.razor
@@ -1,12 +1,11 @@
 ﻿<span>
-    <FluentSelect TOption="NullableTiangan" Style="vertical-align: middle" Width="auto" Items="@possibleTiangans" @bind-SelectedOption="Niangan"></FluentSelect>
-    <FluentSelect TOption="NullableDizhi" Style="vertical-align: middle" Width="auto" Items="@possibleDizhis" @bind-SelectedOption="Nianzhi"></FluentSelect>
+    <FluentSelect TOption="NullableDizhi" Style="vertical-align: middle" Width="auto" Height="200px" Items="@possibleDizhis" @bind-SelectedOption="Nian"></FluentSelect>
     年
-    <FluentSelect TOption="PingRun" Style="vertical-align: middle" Width="auto" Items="@possiblePingRuns" @bind-SelectedOption="IsRunyue"></FluentSelect>
-    <FluentSelect TOption="NullableNumber" Style="vertical-align: middle" Width="auto" Items="@possibleYues" @bind-SelectedOption="Yue"></FluentSelect>
+    <FluentSelect TOption="PingRun" Style="vertical-align: middle" Width="auto"  Height="200px"Items="@possiblePingRuns" @bind-SelectedOption="IsRunyue"></FluentSelect>
+    <FluentSelect TOption="NullableYueNumber" Style="vertical-align: middle" Width="auto" Items="@possibleYues" @bind-SelectedOption="Yue" Height="200px"></FluentSelect>
     月
-    <FluentSelect TOption="NullableNumber" Style="vertical-align: middle" Width="auto" Items="@possibleRis" @bind-SelectedOption="Ri"></FluentSelect>
+    <FluentSelect TOption="NullableRiNumber" Style="vertical-align: middle" Width="auto"  Height="200px"Items="@possibleRis" @bind-SelectedOption="Ri"></FluentSelect>
     日
-    <FluentSelect TOption="NullableDizhi" Style="vertical-align: middle" Width="auto" Items="@possibleDizhis" @bind-SelectedOption="Shi"></FluentSelect>
+    <FluentSelect TOption="NullableDizhi" Style="vertical-align: middle" Width="auto"  Height="200px"Items="@possibleDizhis" @bind-SelectedOption="Shi"></FluentSelect>
     时
 </span>
