--- a/SharpTools/SptlWebsite/Pages/OneHexagramPerDay/OneHexagramPerDayPage.razor
+++ b/SharpTools/SptlWebsite/Pages/OneHexagramPerDay/OneHexagramPerDayPage.razor
@@ -15,9 +15,9 @@
         <FluentStack Orientation="Orientation.Vertical">
             <h2>查询</h2>
             <div>
-                <FluentCombobox TOption="ProcessedGua" Items="guas" Autocomplete="ComboboxAutocomplete.Both" OptionText="@(x => x.PaintingOption)" @bind-SelectedOption="displayingGua"></FluentCombobox>
-                <FluentCombobox TOption="ProcessedGua" Items="guas" Autocomplete="ComboboxAutocomplete.Both" OptionText="@(x => x.UpperLowerOption)" @bind-SelectedOption="displayingGua"></FluentCombobox>
-                <FluentCombobox TOption="ProcessedGua" Items="guas" Autocomplete="ComboboxAutocomplete.Both" OptionText="@(x => x.NameOption)" @bind-SelectedOption="displayingGua"></FluentCombobox>
+                <FluentCombobox TOption="ProcessedGua" Height="200px" Items="guas" Autocomplete="ComboboxAutocomplete.List" OptionText="@(x => x.PaintingOption)" @bind-SelectedOption="displayingGua"></FluentCombobox>
+                <FluentCombobox TOption="ProcessedGua" Height="200px" Items="guas" Autocomplete="ComboboxAutocomplete.List" OptionText="@(x => x.UpperLowerOption)" @bind-SelectedOption="displayingGua"></FluentCombobox>
+                <FluentCombobox TOption="ProcessedGua" Height="200px" Items="guas" Autocomplete="ComboboxAutocomplete.List" OptionText="@(x => x.NameOption)" @bind-SelectedOption="displayingGua"></FluentCombobox>
             </div>
         </FluentStack>
     </FluentCard>
