--- a/SharpTools/SptlWebsite/Pages/LiuyaoDivination/LiuyaoDivinationPage.razor
+++ b/SharpTools/SptlWebsite/Pages/LiuyaoDivination/LiuyaoDivinationPage.razor
@@ -26,14 +26,14 @@
             </div>
 
             <div>
-                西历：<FluentDatePicker Style="vertical-align: middle" @bind-Value="westernDate"></FluentDatePicker><FluentTimePicker Style="vertical-align: middle" @bind-Value="westernTime"></FluentTimePicker>
-            </div>
-            <div>
-                阴历：<InlineNongliLunarDateTimePicker @bind-Value="nongliLunar"></InlineNongliLunarDateTimePicker>
-            </div>
-            <div>
+                西历：<FluentDatePicker Style="vertical-align: middle" @bind-Value="WesternDate"></FluentDatePicker><FluentTimePicker Style="vertical-align: middle" @bind-Value="WesternTime"></FluentTimePicker>
+                <br />
+                阴历：<InlineNongliLunarDateTimePicker @bind-Value="NongliLunar"></InlineNongliLunarDateTimePicker>
+                <br />
                 干支：<InlineNongliSolarDateTimePicker @bind-Value="NongliSolar"></InlineNongliSolarDateTimePicker>
             </div>
+
+            <div style="white-space: pre-wrap">@timeWarnings</div>
 
             <!-- 点 六神 本亲干支行 本 世 动 之亲干支行 之 -->
             <div style="display: grid; grid: auto-flow / 2fr 3fr 6fr 2fr 2fr 2fr 6fr 2fr; overflow-x: auto; max-width: 100%">
@@ -46,7 +46,7 @@
                 <div style="width: 100%; grid-column: 3 / 5">
                     <!-- 本亲干支行 -->
                     <!-- 本 -->
-                    <FluentButton Style="width: 100%">
+                    <FluentButton Style="width: 100%" OnClick="@显示占断参考本卦">
                         @本卦?.Name
                     </FluentButton>
                 </div>
@@ -59,7 +59,7 @@
                 <div style="width: 100%; grid-column: 7 / 9">
                     <!-- 之亲干支行 -->
                     <!-- 之 -->
-                    <FluentButton Style="width: 100%">
+                    <FluentButton Style="width: 100%" OnClick="@显示占断参考之卦">
                         @之卦?.Name
                     </FluentButton>
                 </div>
@@ -76,7 +76,7 @@
                     </div>
                     <div style="width: 100%; grid-column: 2">
                         <!-- 六神 -->
-                        <FluentButton Style="width: 100%">
+                        <FluentButton Style="width: 100%" OnClick="复原占断参考">
                             @各爻六神[爻]
                         </FluentButton>
                     </div>
@@ -84,12 +84,12 @@
                     <div style="width: 100%; grid-column: 3">
                         <!-- 本亲干支行 -->
                         <FluentStack Orientation="Orientation.Vertical" VerticalGap="0">
-                            <FluentButton Style="width: 100%">
+                            <FluentButton Style="width: 100%" OnClick="() => 显示占断参考本卦爻(爻)">
                                 @($"{this.本卦爻六亲[爻]?.ToString(WuxingRelationToStringConversions.Liuqin)}{this.本卦爻天干[爻]:C}{this.本卦爻地支[爻]:C}{this.本卦爻五行[爻]:C}")
                             </FluentButton>
                             @if (this.伏神爻地支[爻] is not null)
                             {
-                                <FluentButton Style="width: 100%">
+                                <FluentButton Style="width: 100%" OnClick="() => 显示占断参考伏神爻(爻)">
                                     @($"{this.伏神爻六亲[爻]?.ToString(WuxingRelationToStringConversions.Liuqin)}{this.伏神爻天干[爻]:C}{this.伏神爻地支[爻]:C}{this.伏神爻五行[爻]:C}")
                                 </FluentButton>
                             }
@@ -98,12 +98,12 @@
                     <div style="width: 100%; grid-column: 4">
                         <!-- 本 -->
                         <FluentStack Orientation="Orientation.Vertical" VerticalGap="0">
-                            <FluentButton Style="width: 100%">
+                            <FluentButton Style="width: 100%" OnClick="() => 显示占断参考本卦爻(爻)">
                                 @this.本卦爻阴阳[爻]?.ToString(this.阴阳文本)
                             </FluentButton>
                             @if (this.伏神爻地支[爻] is not null)
                             {
-                                <FluentButton Style="width: 100%">
+                                <FluentButton Style="width: 100%" OnClick="() => 显示占断参考伏神爻(爻)">
                                     伏
                                 </FluentButton>
                             }
@@ -112,26 +112,26 @@
 
                     <div style="width: 100%; grid-column: 5">
                         <!-- 世 -->
-                        <FluentButton Style="width: 100%">
+                        <FluentButton Style="width: 100%" OnClick="复原占断参考">
                             @this.本卦爻世应真世假应[爻]?.ToString(this.世应文本)
                         </FluentButton>
                     </div>
                     <div style="width: 100%; grid-column: 6">
                         <!-- 动 -->
-                        <FluentButton Style="width: 100%">
+                        <FluentButton Style="width: 100%" OnClick="复原占断参考">
                             @(this.本卦爻动否[爻] is true ? "动" : null)
                         </FluentButton>
                     </div>
 
                     <div style="width: 100%; grid-column: 7">
                         <!-- 之亲干支行 -->
-                        <FluentButton Style="width: 100%">
+                        <FluentButton Style="width: 100%" OnClick="() => 显示占断参考之卦爻(爻)">
                             @($"{this.之卦爻六亲[爻]?.ToString(WuxingRelationToStringConversions.Liuqin)}{this.之卦爻天干[爻]:C}{this.之卦爻地支[爻]:C}{this.之卦爻五行[爻]:C}")
                         </FluentButton>
                     </div>
                     <div style="width: 100%; grid-column: 8">
                         <!-- 之 -->
-                        <FluentButton Style="width: 100%">
+                        <FluentButton Style="width: 100%" OnClick="() => 显示占断参考之卦爻(爻)">
                             @this.之卦爻阴阳[爻]?.ToString(this.阴阳文本)
                         </FluentButton>
                     </div>
@@ -142,8 +142,7 @@
     <FluentCard AreaRestricted="false">
         <FluentStack Orientation="Orientation.Vertical">
             <h2>占断参考</h2>
-            <FluentTextArea ReadOnly="true" Style="width: 100%" Rows="5">
-            </FluentTextArea>
+            <p style="white-space: pre-wrap">@reference</p>
         </FluentStack>
     </FluentCard>
 </FluentStack>
